packages/dappy-node/kubernetes/envs/digitalocean/d/pg/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx-fabco"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - adminer.d.fabco.tech
      secretName: adminer-d-fabco-tech
  rules:
    - host: adminer.d.fabco.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adminer
              port:
                number: 8080
